--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,6 +36,16 @@
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('auth.login') }}">{{ _('Login') }}</a></li>
                     {% else %}
+                    <li>
+                        <a href="{{ url_for('main.messages') }}">
+                            {{ _('Messages') }}
+                            
+                            {% set new_messages = current_user.new_messages() %}
+                            <span id="message_count" class="badge" style="visibility: {% if new_messages %} visible {% else %} hidden {% endif %};">
+                                {{ new_messages }}
+                            </span>
+                        </a>
+                    </li>
                     <li><a href="{{ url_for('main.user', username=current_user.username) }}">{{ _('Profile') }}</a></li>
                     <li><a href="{{ url_for('auth.logout') }}">{{ _('Logout') }}</a></li>
                     {% endif %}
@@ -92,6 +102,7 @@ then any content defined for this block in the base template will be lost. -->
                 $(destElem).text("{{ _('Error: Could not contact server.') }}")
             });
         }
+        //popup js
         $(function(){
             var timer = null;
             var xhr = null;
@@ -128,5 +139,26 @@ then any content defined for this block in the base template will be lost. -->
                 }
             )
         });
+
+        function set_message_count(n){
+            $('#message_count').text(n);
+            $('#message_count').css('visibility', n?'visible':'hidden');
+        }
+
+        {% if current_user.is_authenticated %}
+        $(function(){
+            var since = 0;
+            setInterval(function(){
+                $.ajax('{{ url_for('main.notifications') }}?since=' + since).done(
+                    function(notifications){
+                        for(var i = 0; i<notifications.length; i++){
+                            if (notifications[i].name == 'unread_message_count')
+                                set_message_count(notifications[i].data);
+                            since = notifications[i].timestamp;
+                        }
+                    });
+            }, 10000);
+        });
+        {% endif %}
     </script>
 {% endblock %}
